ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dinendash-ingress
  namespace: dinendash
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - grupo8-egs.deti.ua.pt
    secretName: dinendash-tls-secret
  rules:
    - host: grupo8-egs.deti.ua.pt
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /tracking
            pathType: Prefix
            backend:
              service:
                name: tracking-service
                port:
                  number: 5007
          - path: /routes
            pathType: Prefix
            backend:
              service:
                name: route-optimization-service
                port:
                  number: 8000
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: frontend-client
                port:
                  number: 5173
          - path: /courier
            pathType: Prefix
            backend:
              service:
                name: frontend-courier
                port:
                  number: 5173
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-client
                port:
                  number: 5173
